removed unnecessary enters, imports and formatted the text